# VeloxBook

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-cd.yml
certs/: certs.txt
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.jsx  tailwind.css
frontend/src/components/: Header.jsx  MyOrders.jsx  OrderBook.jsx  OrderForm.jsx  TickerTape.jsx  TradeHistory.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Register.jsx
frontend/src/services/: api.js  auth.jsx  darkmode.jsx  useOrderBookSocket.jsx
latency_test/: README.md  requirements.txt  run_test.bat  run_test.sh  websocket_latency_test.py
src/: CMakeLists.txt  CorsFilter.h  OrderBookController.cpp  OrderBookController.h  OrderBookWebSocket.cpp  OrderBookWebSocket.h  api_server.cpp  config.json  matching_engine.cpp  matching_engine.hpp  order.hpp  order_book.cpp  order_book.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_fuzz_server.cpp  test_integration.cpp  test_matching_engine.cpp  test_orderbook_controller.cpp
